Clean up the 'Deploy to Docker' page

--- a/docs/3.0rc/deploy/static-infra/index.mdx
+++ b/docs/3.0rc/deploy/static-infra/index.mdx
@@ -92,11 +92,11 @@ if __name__ == "__main__":
     )
 ```
 
-When you rerun this script, you will find an updated deployment in the UI that is actively scheduling work.  
+When you rerun this script, you will find an updated deployment in the UI that is actively scheduling work.
 Stop the script in the CLI using `CTRL+C` and your schedule automatically pauses.
 
 <Note>
-**`.serve` is a long-running process**
+**`serve()` is a long-running process**
 
 To execute remotely triggered or scheduled runs, your script with `flow.serve` must be actively running.
 </Note>
