--- a/docs/3.0rc/deploy/static-infra/push-runs-remote.mdx
+++ b/docs/3.0rc/deploy/static-infra/push-runs-remote.mdx
@@ -1,77 +1,20 @@
 ---
 title: Deploy to Docker
-description: Learn how flow deployments enable configuring flows for scheduled and remote execution with workers.
+description: Learn how to deploy a flow to a Docker work pool with workers
 ---
 
-## Prerequisites
-
-[Docker](https://docs.docker.com/engine/install/) installed and running on your machine.
-
-## About workers
-
-Work pools that rely on client-side workers enable you to run work flows in your own Docker containers, Kubernetes clusters, 
-and serverless environments such as AWS ECS, Azure Container Instances, and GCP Cloud Run.
-
-The following diagram summarizes the architecture of a worker-based work pool deployment:
-
-```mermaid
-graph TD
-    subgraph your_infra["Your Execution Environment"]
-        worker["Worker"]
-    subgraph flow_run_infra[Flow Run Infra]
-     flow_run_a(("Flow Run A"))
-    end
-    subgraph flow_run_infra_2[Flow Run Infra]
-     flow_run_b(("Flow Run B"))
-    end      
-    end
-
-    subgraph api["Prefect API"]
-    Deployment --> |assigned to| work_pool
-        work_pool(["Work Pool"])
-    end
-
-    worker --> |polls| work_pool
-    worker --> |creates| flow_run_infra
-    worker --> |creates| flow_run_infra_2
-```
-
-<Tip>
-Notice above that the worker is in charge of provisioning the _flow run infrastructure_.
-In the context of this tutorial, that flow run infrastructure is an ephemeral Docker container to host each flow run.
-Different [worker types](/3.0rc/deploy/workers/#worker-types) create different types of flow run 
-infrastructure.
-</Tip>
-
-Next, create a work pool and worker to deploy your tutorial flow. You will execute it later with the Prefect API.
-
-## Set up a work pool and worker
-
-In this guide you will create a **Docker** type work pool through the CLI.
-
-When you set the work pool type to **Docker**, the worker uses an available Docker 
-client to execute all work sent to this pool inside a dedicated Docker container.
-
-<Tip>
-**Other work pool types**
-
-There are [work pool types](/3.0rc/deploy/work-pools/#work-pool-types) for serverless computing 
-environments such as AWS ECS, Azure Container Instances, Google Cloud Run, and Vertex AI.
-Kubernetes is also a popular work pool type.
-</Tip>
+In this tutorial, you will create a work pool and worker to deploy your tutorial flow, and then execute it with the Prefect API.
+You must have [Docker](https://docs.docker.com/engine/install/) installed and running on your machine.
 
 ### Create a work pool
 
 To set up a **Docker** type work pool, run:
 
-
 ```bash
 prefect work-pool create --type docker my-docker-pool
 ```
 
-
 To confirm the work pool creation was successful, run:
-
 
 ```bash
 prefect work-pool ls
@@ -80,12 +23,11 @@ prefect work-pool ls
 You should see your new `my-docker-pool` listed in the output.
 
 Next, check that you can see this work pool in your Prefect UI.
-
 Navigate to the **Work Pools** tab and verify that you see `my-docker-pool` listed.
-
 When you click into `my-docker-pool`, you should see a red status icon signifying that this work pool is not ready.
 
-To make the work pool ready, start a worker.
+To make the work pool ready, you'll need to start a worker.
+We'll show how to do this next.
 
 ### Start a worker
 
@@ -97,25 +39,23 @@ Run the following command in this new terminal to start the worker:
 
 ```bash
 prefect worker start --pool my-docker-pool
-
 ```
 
 You should see the worker start.
 It's now polling the Prefect API to check for any scheduled flow runs it should pick up and then submit for execution.
 You’ll see your new worker listed in the UI under the **Workers** tab of the Work Pools page with a recent last polled date.
-
-You should now see a `Ready` status indicator on your work pool.
+The work pool should have a `Ready` status indicator.
 
 Keep this terminal session active for the worker to continue to pick up jobs.
 Since you are running this worker locally, the worker will terminate if you close the terminal.
-In a production setting this worker should run as a [daemonized or managed process](/3.0rc/deploy/static-infra/push-runs-remote/).
+In a production setting this worker should run as a [daemonized or managed process](/3.0rc/resources/daemonize-processes/).
 
 ## Create the deployment
 
 From the previous steps, you now have:
 
-1. A work pool
-1. A worker
+- A work pool
+- A worker
 
 Next, you'll create a deployment from your flow code.
 
@@ -138,9 +78,7 @@ if __name__ == "__main__":
     )
 ```
 
-Ensure the [work pool](/3.0rc/deploy/work-pools/) exists in the Prefect Cloud workspace you are 
-authenticated to, or on your running self-hosted server instance.  
-Then run the script to create a deployment (in future examples this step is omitted for brevity):
+Now, run the script to create a deployment (in future examples this step is omitted for brevity):
 
 ```bash
 python buy.py
@@ -230,45 +168,45 @@ The `DockerImage` object enables image customization.
 
 For example, you can install a private Python package from GCP's artifact registry like this:
 
-Create a custom base Dockerfile.
+1. Create a custom base Dockerfile.
 
-```
-FROM python:3.10
+   ```
+   FROM python:3.10
 
-ARG AUTHED_ARTIFACT_REG_URL
-COPY ./requirements.txt /requirements.txt
+   ARG AUTHED_ARTIFACT_REG_URL
+   COPY ./requirements.txt /requirements.txt
 
-RUN pip install --extra-index-url ${AUTHED_ARTIFACT_REG_URL} -r /requirements.txt
-```
+   RUN pip install --extra-index-url ${AUTHED_ARTIFACT_REG_URL} -r /requirements.txt
+   ```
 
-Create your deployment with the DockerImage class:
+1. Create your deployment with the DockerImage class:
 
-```python private-package.py
-from prefect import flow
-from prefect.deployments.runner import DockerImage
-from prefect.blocks.system import Secret
-from my_private_package import do_something_cool
-
-
-@flow(log_prints=True)
-def my_flow():
-    do_something_cool()
+   ```python private-package.py
+   from prefect import flow
+   from prefect.deployments.runner import DockerImage
+   from prefect.blocks.system import Secret
+   from my_private_package import do_something_cool
 
 
-if __name__ == "__main__":
-    artifact_reg_url: Secret = Secret.load("artifact-reg-url")
+   @flow(log_prints=True)
+   def my_flow():
+       do_something_cool()
+
+
+   if __name__ == "__main__":
+       artifact_reg_url: Secret = Secret.load("artifact-reg-url")
     
-    my_flow.deploy(
-        name="my-deployment",
-        work_pool_name="my-docker-pool",
-        image=DockerImage(
-            name="my-image",
-            tag="test",
-            dockerfile="Dockerfile",
-            buildargs={"AUTHED_ARTIFACT_REG_URL": artifact_reg_url.get()},
-        ),
-    )
-```
+       my_flow.deploy(
+           name="my-deployment",
+           work_pool_name="my-docker-pool",
+           image=DockerImage(
+               name="my-image",
+               tag="test",
+               dockerfile="Dockerfile",
+               buildargs={"AUTHED_ARTIFACT_REG_URL": artifact_reg_url.get()},
+           ),
+       )
+   ```
 
 Note that you used a [Prefect Secret block](/3.0rc/develop/blocks/) to load the URL configuration for 
 the artifact registry above.
@@ -305,7 +243,7 @@ See all the optional keyword arguments for the [DockerImage class](https://docke
 ### Store your code in git-based cloud storage
 
 While baking code into Docker images is a popular deployment option, many teams store their workflow code in git-based 
-storage, such as GitHub, Bitbucket, or Gitlab.
+storage, such as GitHub, Bitbucket, or GitLab.
 
 If you don't specify an `image` argument for `.deploy`, you must specify where to pull the flow code from at runtime 
 with the `from_source` method.
@@ -328,7 +266,7 @@ if __name__ == "__main__":
 
 The `entrypoint` is the path to the file the flow is located in and the function name, separated by a colon.
 
-Alternatively, you could specify a git-based cloud storage URL for a Bitbucket or Gitlab repository.
+Alternatively, you could specify a git-based cloud storage URL for a Bitbucket or GitLab repository.
 
 <Note>
     If you don't specify an image as part of your deployment creation, the image specified in the work pool 
@@ -351,13 +289,13 @@ from prefect.blocks.system import Secret
 if __name__ == "__main__":
     flow.from_source(
         source=GitRepository(
-        url="https://github.com/org/private-repo.git",
-        branch="dev",
-        credentials={
-            "access_token": Secret.load("github-access-token")
-        }
-    ),
-    entrypoint="flows/no-image.py:hello_world",
+            url="https://github.com/org/private-repo.git",
+            branch="dev",
+            credentials={
+                "access_token": Secret.load("github-access-token")
+            }
+        ),
+        entrypoint="flows/no-image.py:hello_world",
     ).deploy(
         name="private-git-storage-deployment",
         work_pool_name="my-docker-pool",
@@ -411,8 +349,7 @@ if __name__ == "__main__":
 The deployment creation mechanics or `.serve` are similar to `.deploy`. `.deploy` 
 just requires a work pool name and has a number of parameters dealing with flow code storage for Docker images.
 
-Unlike `.serve`, if you don't specify an image to use for your flow, you must to specify where to pull the flow code from at runtime  
-with the `from_source` method; `from_source` is optional with `.serve`.
+Unlike `.serve`, if you don't specify an image to use for your flow, you must to specify where to pull the flow code from at runtime with the `from_source` method; `from_source` is optional with `.serve`.
 
 ### Additional configuration with `.deploy`
 
@@ -473,7 +410,7 @@ The dictionary key "EXTRA_PIP_PACKAGES" denotes a special environment variable t
 Python packages at runtime.
 This approach is an alternative to building an image with a custom `requirements.txt` copied into it.
 
-For more information on [overriding job variables](/3.0rc/deploy/customize).
+See [Override work pool job variables](/3.0rc/deploy/customize) for more information about how to customize these variables.
 
 ### Work with multiple deployments with `deploy`
 
@@ -552,7 +489,7 @@ if __name__ == "__main__":
     )
 ```
 
-You could pass any number of flows to the `deploy` function.
+You can pass any number of flows to the `deploy` function.
 This is useful if using a monorepo approach to your workflows.
 
 ## Learn more
@@ -560,4 +497,4 @@ This is useful if using a monorepo approach to your workflows.
 - [Deploy flows on Kubernetes](/3.0rc/deploy/dynamic-infra/deploy-kubernetes/)
 - [Deploy flows in Docker](/3.0rc/deploy/static-infra/push-runs-remote/)
 - [Deploy flows on serverless infrastructure](/3.0rc/deploy/dynamic-infra/push-runs-serverless/)
-- [Daemonize workers](/3.0rc/deploy/static-infra/push-runs-remote/)
+- [Daemonize workers](/3.0rc/resources/daemonize-processes/)
