--- a/docs/3.0rc/deploy/workers.mdx
+++ b/docs/3.0rc/deploy/workers.mdx
@@ -5,9 +5,37 @@ description: Prefect workers poll work pools for new runs to execute.
 
 Workers are lightweight polling services that retrieve scheduled runs from a work pool and execute them.
 
-Workers each have a type corresponding to the execution environment to submit flow runs to. Workers can only poll 
-work pools that match their type. As a result, when deployments are assigned to a work pool, you know in which execution environment 
-scheduled flow runs for that deployment will run.
+Workers each have a type corresponding to the execution environment to submit flow runs to.
+Workers can only poll work pools that match their type.
+As a result, when deployments are assigned to a work pool, you know in which execution environment scheduled flow runs for that deployment will run.
+
+The following diagram summarizes the architecture of a worker-based work pool deployment:
+
+```mermaid
+graph TD
+    subgraph your_infra["Your Execution Environment"]
+        worker["Worker"]
+    subgraph flow_run_infra[Flow Run Infra]
+     flow_run_a(("Flow Run A"))
+    end
+    subgraph flow_run_infra_2[Flow Run Infra]
+     flow_run_b(("Flow Run B"))
+    end      
+    end
+
+    subgraph api["Prefect API"]
+    Deployment --> |assigned to| work_pool
+        work_pool(["Work Pool"])
+    end
+
+    worker --> |polls| work_pool
+    worker --> |creates| flow_run_infra
+    worker --> |creates| flow_run_infra_2
+```
+
+<Tip>
+Notice above that the worker is in charge of provisioning the _flow run infrastructure_.
+</Tip>
 
 ### Worker types
 
@@ -140,7 +168,7 @@ If `prefect worker start` is run non-interactively, the `prompt` install policy 
 
 ### Additional resources
 
-See how to [daemonize a Prefect worker](/3.0rc/deploy/static-infra/push-runs-remote/).
+See how to [daemonize a Prefect worker](/3.0rc/resources/daemonize-processes/).
 
 See more information on [overriding a work pool's job variables](/3.0rc/deploy/customize).
 
