--- a/docs/3.0rc/deploy/dynamic-infra/managed-execution.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/managed-execution.mdx
@@ -8,55 +8,42 @@ account—Prefect handles the infrastructure and code execution for you.
 
 Managed execution is a great option for users who want to get started quickly, with no infrastructure setup.
 
-## Usage guide
+## Create a managed deployment
 
-Run a flow with managed infrastructure in three steps.
+1. Create a new work pool of type Prefect Managed in the UI or the CLI.
+   Use this command to create a new work pool using the CLI:
 
-### Step 1: Create a new work pool
+   ```bash
+   prefect work-pool create my-managed-pool --type prefect:managed
+   ```
 
-Create a new work pool of type Prefect Managed in the UI or the CLI.
-Use this command to create a new work pool using the CLI:
+1. Create a deployment using the flow `deploy` method or `prefect.yaml`.
+   Specify the name of your managed work pool, as shown in this example that uses the `deploy` method:
 
-```bash
-prefect work-pool create my-managed-pool --type prefect:managed
-```
+   ```python managed-execution.py
+   from prefect import flow
 
-### Step 2: Create a deployment
+   if __name__ == "__main__":
+       flow.from_source(
+           source="https://github.com/prefecthq/demo.git",
+           entrypoint="flow.py:my_flow",
+       ).deploy(
+           name="test-managed-flow",
+           work_pool_name="my-managed-pool",
+       )
+   ```
 
-Create a deployment using the flow `deploy` method or `prefect.yaml`.
+1. With your [CLI authenticated to your Prefect Cloud workspace](/3.0rc/manage/cloud/manage-users/api-keys/), run the script to create your deployment:
 
-Specify the name of your managed work pool, as shown in this example that uses the `deploy` method:
+   ```bash
+   python managed-execution.py
+   ```
 
-```python managed-execution.py
-from prefect import flow
+1. Run the deployment from the UI or from the CLI.
 
-if __name__ == "__main__":
-    flow.from_source(
-    source="https://github.com/prefecthq/demo.git",
-    entrypoint="flow.py:my_flow",
-    ).deploy(
-        name="test-managed-flow",
-        work_pool_name="my-managed-pool",
-    )
-```
+   This process runs a flow on remote infrastructure without any infrastructure setup, starting a worker, or requiring a cloud provider account.
 
-With your [CLI authenticated to your Prefect Cloud workspace](/3.0rc/manage/cloud/manage-users/api-keys/), 
-run the script to create your deployment:
-
-```bash
-python managed-execution.py
-```
-
-Note that this deployment uses flow code stored in a GitHub repository.
-
-### Step 3: Run the deployment
-
-Run the deployment from the UI or from the CLI.
-
-This process runs a flow on remote infrastructure without any infrastructure setup, starting a worker, 
-or requiring a cloud provider account.
-
-### Add dependencies
+## Add dependencies
 
 Prefect can install Python packages in the container that runs your flow at runtime.
 Specify these dependencies in the **Pip Packages** field in the UI, or by configuring 
@@ -67,8 +54,8 @@ from prefect import flow
 
 if __name__ == "__main__":
     flow.from_source(
-    source="https://github.com/prefecthq/demo.git",
-    entrypoint="flow.py:my_flow",
+        source="https://github.com/prefecthq/demo.git",
+        entrypoint="flow.py:my_flow",
     ).deploy(
         name="test-managed-flow",
         work_pool_name="my-managed-pool",
