Clean up the 'Deploy to serverless infrastructure' page

--- a/docs/3.0rc/deploy/dynamic-infra/push-runs-serverless.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/push-runs-serverless.mdx
@@ -675,5 +675,4 @@ to your serverless infrastructure, created a job, ran the job, and reported on i
 
 Learn more about [work pools](/3.0rc/deploy/work-pools/) and [workers](/3.0rc/deploy/workers/).
 
-Learn about installing dependencies at runtime or baking them into your Docker image in the [Deploying flows to work 
-pools and workers](/3.0rc/deploy/static-infra/push-runs-remote/#creating-work-pool-based-deployments-with-deploy) guide.
+Learn about installing dependencies at runtime or baking them into your Docker image in the [Deploy to Docker](/3.0rc/deploy/static-infra/push-runs-remote#automatically-build-a-custom-docker-image-with-a-local-dockerfile) guide.
