Clean up the 'Work pools' and 'Workers' pages

--- a/docs/3.0rc/deploy/work-pools.mdx
+++ b/docs/3.0rc/deploy/work-pools.mdx
@@ -71,12 +71,11 @@ For example, a flow may have Python package requirements, unique Kubernetes sett
 - How should the flow code be accessed?
 
 [Serve flows](/3.0rc/deploy/static-infra/index/) shows how to create a deployment with a long-running process using `.serve`, 
-and how to move to a [work-pool-based deployment](/3.0rc/deploy/static-infra/push-runs-remote/) setup with `.deploy`.
-Learn more about when to move to [work-pool-based deployments](/3.0rc/deploy/work-pools/).
+and how to move to a [work pool deployment](/3.0rc/deploy/static-infra/push-runs-remote/) setup with `.deploy`.
+Learn more about when to move to [work pool deployments](#benefits-of-work-pools).
 
 Next, you'll learn how to use `.deploy` to create deployments with Python code.
-If you prefer to learn about using a YAML-based alternative for managing deployment configuration, skip to the 
-[`prefect.yaml` section](#creating-work-pool-based-deployments-with-prefectyaml).
+If you prefer to learn about using a YAML-based alternative for managing deployment configuration, skip to [Create deployments with YAML](/3.0rc/deploy/prefect-yaml).
 
 ### Work pool configuration
 
