--- a/docs/3.0rc/deploy/workers.mdx
+++ b/docs/3.0rc/deploy/workers.mdx
@@ -56,10 +56,10 @@ If you don’t see a worker type that meets your needs, consider
 
 ### Worker options
 
-Workers poll for work from one or more queues within a work pool. If the worker references a work queue that doesn't exist, 
-it is created automatically. The worker CLI infers the worker type from the work pool. Alternatively, you can  
-specify the worker type explicitly. If you supply the worker type to the worker CLI, a work pool is created automatically 
-if it doesn't exist (using default job settings).
+Workers poll for work from one or more queues within a work pool. If the worker references a work queue that doesn't exist, it is created automatically.
+The worker CLI infers the worker type from the work pool.
+Alternatively, you can specify the worker type explicitly.
+If you supply the worker type to the worker CLI, a work pool is created automatically if it doesn't exist (using default job settings).
 
 Configuration parameters you can specify when starting a worker include:
 
