A bit more cleanup

--- a/docs/3.0rc/deploy/prefect-yaml.mdx
+++ b/docs/3.0rc/deploy/prefect-yaml.mdx
@@ -1,5 +1,5 @@
 ---
-title: Create deployments with YAML
+title: Define deployments with YAML
 description: Use YAML to schedule and trigger flow runs and manage your code and deployments.
 ---
 
