--- a/docs/3.0rc/deploy/store-flow-code.mdx
+++ b/docs/3.0rc/deploy/store-flow-code.mdx
@@ -9,8 +9,7 @@ Flow code is not stored in a Prefect server instance or in Prefect Cloud.
 You have several flow code storage options.
 
 This guide focuses on deployments created with the interactive CLI experience or a prefect.yaml file. 
-To create deployments with Python code, see the [work pools and workers guide](/3.0rc/deploy/static-infra/push-runs-remote/#creating-work-pool-based-deployments-with-deploy).
-
+To create deployments with Python code, see the [work pools guide](/3.0rc/deploy/work-pools).
 
 ## Git-based storage
 
