Manage-users-title-cleanup

--- a/docs/3.0rc/manage/cloud/index.mdx
+++ b/docs/3.0rc/manage/cloud/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: What's Prefect Cloud?
+title: Prefect Cloud Overview
 description: Observe and orchestrate your workflow applications with the Prefect Cloud platform.
 ---
 
