--- a/docs/3.0rc/manage/cloud/manage-users/audit-logs.mdx
+++ b/docs/3.0rc/manage/cloud/manage-users/audit-logs.mdx
@@ -1,5 +1,5 @@
 ---
-title: Audit activity
+title: Audit Cloud activity
 description: Monitor user access and activity with audit logs in Prefect Cloud.
 mode: wide
 ---
