Disband the 'Static infrastructure' group

--- a/docs/3.0rc/deploy/run-flows-in-local-processes.mdx
+++ b/docs/3.0rc/deploy/run-flows-in-local-processes.mdx
@@ -1,9 +1,9 @@
 ---
-title: Deploy to a local environment
+title: Run flows in local processes
 description: Create a deployment for a flow by calling the `serve` method.
 ---
 
-The simplest way to create a [deployment](/3.0rc/deploy/static-infra/push-runs-remote/) for your 
+The simplest way to create a [deployment](/3.0rc/deploy/dynamic-infra/push-runs-remote/) for your 
 flow is by calling its `serve` method.
 
 <Warning>
