Rename 'Dynamic infrastructure' to 'Infrastructure specific examples'

--- a/docs/3.0rc/deploy/infrastructure/docker.mdx
+++ b/docs/3.0rc/deploy/infrastructure/docker.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deploy to Docker
+title: Run flows in Docker containers
 description: Learn how to deploy a flow to a Docker work pool with workers
 ---
 
@@ -494,7 +494,7 @@ This is useful if using a monorepo approach to your workflows.
 
 ## Learn more
 
-- [Deploy flows on Kubernetes](/3.0rc/deploy/dynamic-infra/deploy-kubernetes/)
-- [Deploy flows in Docker](/3.0rc/deploy/dynamic-infra/push-runs-remote/)
-- [Deploy flows on serverless infrastructure](/3.0rc/deploy/dynamic-infra/push-runs-serverless/)
+- [Deploy flows on Kubernetes](/3.0rc/deploy/infrastructure/kubernetes/)
+- [Deploy flows in Docker](/3.0rc/deploy/infrastructure/docker/)
+- [Deploy flows on serverless infrastructure](/3.0rc/deploy/infrastructure/serverless/)
 - [Daemonize workers](/3.0rc/resources/daemonize-processes/)
