--- a/docs/3.0rc/deploy/infrastructure/kubernetes.mdx
+++ b/docs/3.0rc/deploy/infrastructure/kubernetes.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deploy to Kubernetes
+title: Run flows on Kubernetes
 description: Learn how to run flows on Kubernetes using containers.
 ---
 
@@ -407,7 +407,7 @@ The `prefect.yaml` file currently allows for more customization in terms of push
 steps.
 
 To learn about the Python deployment creation method with `flow.deploy` see 
-[Workers](/3.0rc/deploy/dynamic-infra/push-runs-remote/).
+[Workers](/3.0rc/deploy/infrastructure/docker/).
 
 The [`prefect.yaml`](/3.0rc/deploy/prefect-yaml/#managing-deployments) file is used 
 by the `prefect deploy` command to deploy your flows.
