--- a/docs/3.0rc/deploy/infrastructure/managed.mdx
+++ b/docs/3.0rc/deploy/infrastructure/managed.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deploy to managed infrastructure
+title: Run flows on Prefect Managed infra
 description: Learn how Prefect will run your deployment on our infrastructure.
 ---
 Prefect Cloud can run your flows on your behalf with Prefect Managed work pools.
@@ -106,8 +106,8 @@ You can view your compute hours quota usage on the **Work Pools** page in the UI
 
 ## Next steps
 
-Read more about creating deployments in the [deployment guide](/3.0rc/deploy/dynamic-infra/push-runs-remote/).
+Read more about creating deployments in the [deployment guide](/3.0rc/deploy/infrastructure/docker/).
 
 For more control over your infrastructure, such as the ability to run 
-custom Docker images, [serverless push work pools](/3.0rc/deploy/dynamic-infra/push-runs-serverless/) 
+custom Docker images, [serverless push work pools](/3.0rc/deploy/infrastructure/serverless/) 
 are also a good option.
