Move infrastructure concept topics to a new directory

--- a/docs/3.0rc/deploy/index.mdx
+++ b/docs/3.0rc/deploy/index.mdx
@@ -167,7 +167,7 @@ anytime the flow or task runs, allowing you to audit changes.
 
 ### Worker-specific fields
 
-[Work pools](/3.0rc/deploy/work-pools/) and [workers](/3.0rc/deploy/workers/) are an advanced deployment pattern that 
+[Work pools](/3.0rc/deploy/infrastructure-concepts/work-pools/) and [workers](/3.0rc/deploy/infrastructure-concepts/workers/) are an advanced deployment pattern that 
 allow you to dynamically provision infrastructure for each flow run.
 The work pool job template interface allows users to create and govern opinionated interfaces 
 to their workflow infrastructure.
@@ -225,7 +225,7 @@ Consider running flows on dynamically provisioned infrastructure with work pools
 - If your internal team structure requires that deployment authors be members of a different team 
 than the team managing infrastructure.
 
-[Work pools](/3.0rc/deploy/work-pools/) allow Prefect to exercise greater control 
+[Work pools](/3.0rc/deploy/infrastructure-concepts/work-pools/) allow Prefect to exercise greater control 
 of the infrastructure on which flows run.
 Options for [serverless work pools](/3.0rc/deploy/infrastructure-examples/serverless/) allow you to 
 scale to zero when workflows aren't running.
