--- a/docs/3.0rc/deploy/infrastructure-concepts/store-flow-code.mdx
+++ b/docs/3.0rc/deploy/infrastructure-concepts/store-flow-code.mdx
@@ -9,7 +9,7 @@ Flow code is not stored in a Prefect server instance or in Prefect Cloud.
 You have several flow code storage options.
 
 This guide focuses on deployments created with the interactive CLI experience or a prefect.yaml file. 
-To create deployments with Python code, see the [work pools guide](/3.0rc/deploy/work-pools).
+To create deployments with Python code, see the [work pools guide](/3.0rc/deploy/infrastructure-concepts/work-pools).
 
 ## Git-based storage
 
@@ -289,7 +289,7 @@ Below are the recipe options and the relevant portions of the `prefect.yaml` fil
     </Tab>
 </Tabs>
 
-Another authentication option is to give the [worker](/3.0rc/deploy/workers/) access 
+Another authentication option is to give the [worker](/3.0rc/deploy/infrastructure-concepts/workers/) access 
 to the storage location at runtime through SSH keys.
 
 Alternatively, you can inject environment variables into your deployment. See this example that uses an environment variable named 
