--- a/docs/3.0rc/deploy/infrastructure-concepts/workers.mdx
+++ b/docs/3.0rc/deploy/infrastructure-concepts/workers.mdx
@@ -170,6 +170,6 @@ If `prefect worker start` is run non-interactively, the `prompt` install policy 
 
 See how to [daemonize a Prefect worker](/3.0rc/resources/daemonize-processes/).
 
-See more information on [overriding a work pool's job variables](/3.0rc/deploy/customize).
+See more information on [overriding a work pool's job variables](/3.0rc/deploy/infrastructure-concepts/customize).
 
 ---------
