--- a/docs/3.0rc/deploy/infrastructure-examples/serverless.mdx
+++ b/docs/3.0rc/deploy/infrastructure-examples/serverless.mdx
@@ -3,7 +3,7 @@ title: Run flows on serverless infra
 description: Learn how to use Prefect push work pools to schedule work on serverless infrastructure without having to run a worker.
 ---
 
-Push [work pools](/3.0rc/deploy/work-pools/) are a special type of work pool. They allow 
+Push [work pools](/3.0rc/deploy/infrastructure-concepts/work-pools/) are a special type of work pool. They allow 
 Prefect Cloud to submit flow runs for execution to serverless computing infrastructure without requiring you to run a worker.
 Push work pools currently support execution in AWS ECS tasks, Azure Container Instances, Google Cloud Run jobs, and Modal.
 
@@ -617,7 +617,7 @@ Click **Create** to configure your push work pool by selecting a push option in 
   <Tab title="AWS ECS">
 
     Each step has several optional fields that are detailed in the
-     [work pools documentation](/3.0rc/deploy/work-pools/). 
+     [work pools documentation](/3.0rc/deploy/infrastructure-concepts/work-pools/). 
     Select the block you created under the AWS Credentials field. 
     This allows Prefect Cloud to securely interact with your ECS cluster.
  </Tab>
@@ -629,14 +629,14 @@ Click **Create** to configure your push work pool by selecting a push option in 
  <Tab title="Google Cloud Run">
 
     Each step has several optional fields that are detailed in the 
-    [work pools guide](/3.0rc/deploy/work-pools/). 
+    [work pools guide](/3.0rc/deploy/infrastructure-concepts/work-pools/). 
     Select the block you created under the GCP Credentials field. 
     This allows Prefect Cloud to securely interact with your GCP project.
  </Tab>
  <Tab title="Modal">
 
     Each step has several optional fields that are detailed in the 
-    [work pools documentation](/3.0rc/deploy/work-pools/). 
+    [work pools documentation](/3.0rc/deploy/infrastructure-concepts/work-pools/). 
     Select the block you created under the Modal Credentials field. 
     This allows Prefect Cloud to securely interact with your Modal account.
  </Tab>
@@ -673,6 +673,6 @@ to your serverless infrastructure, created a job, ran the job, and reported on i
 
 ## Next steps
 
-Learn more about [work pools](/3.0rc/deploy/work-pools/) and [workers](/3.0rc/deploy/workers/).
+Learn more about [work pools](/3.0rc/deploy/infrastructure-concepts/work-pools/) and [workers](/3.0rc/deploy/infrastructure-concepts/workers/).
 
 Learn about installing dependencies at runtime or baking them into your Docker image in the [Deploy to Docker](/3.0rc/deploy/infrastructure-examples/docker#automatically-build-a-custom-docker-image-with-a-local-dockerfile) guide.
