--- a/docs/3.0rc/deploy/infrastructure-examples/docker.mdx
+++ b/docs/3.0rc/deploy/infrastructure-examples/docker.mdx
@@ -377,7 +377,7 @@ if __name__ == "__main__":
 
 The `job_variables` parameter allows you to fine-tune the infrastructure settings for a deployment.
 The values passed in override default values in the specified work pool's 
-[base job template](/3.0rc/deploy/work-pools/#base-job-template).
+[base job template](/3.0rc/deploy/infrastructure-concepts/work-pools/#base-job-template).
 
 You can override environment variables, such as `image_pull_policy` and `image`, for a specific deployment with the `job_variables` 
 argument.
@@ -410,7 +410,7 @@ The dictionary key "EXTRA_PIP_PACKAGES" denotes a special environment variable t
 Python packages at runtime.
 This approach is an alternative to building an image with a custom `requirements.txt` copied into it.
 
-See [Override work pool job variables](/3.0rc/deploy/customize) for more information about how to customize these variables.
+See [Override work pool job variables](/3.0rc/deploy/infrastructure-concepts/customize) for more information about how to customize these variables.
 
 ### Work with multiple deployments with `deploy`
 
