--- a/docs/3.0rc/deploy/infrastructure-examples/kubernetes.mdx
+++ b/docs/3.0rc/deploy/infrastructure-examples/kubernetes.mdx
@@ -183,7 +183,7 @@ If you already have a registry, skip ahead to the next section.
 
 ## Create a Kubernetes work pool
 
-[Work pools](3.0rc/deploy/work-pools/) allow you to manage deployment 
+[Work pools](3.0rc/deploy/infrastructure-concepts/work-pools/) allow you to manage deployment 
 infrastructure.
 This section shows you how to configure the default values for your 
 Kubernetes base job template.
@@ -409,7 +409,7 @@ steps.
 To learn about the Python deployment creation method with `flow.deploy` see 
 [Workers](/3.0rc/deploy/infrastructure-examples/docker/).
 
-The [`prefect.yaml`](/3.0rc/deploy/prefect-yaml/#managing-deployments) file is used 
+The [`prefect.yaml`](/3.0rc/deploy/infrastructure-concepts/prefect-yaml/#managing-deployments) file is used 
 by the `prefect deploy` command to deploy your flows.
 As a part of that process it also builds and pushes your image.
 Create a new file named `prefect.yaml` with the following contents:
