Rename the topics in the 'Run flows on infrastructure' section

--- a/docs/3.0rc/deploy/infrastructure-concepts/deploy-ci-cd.mdx
+++ b/docs/3.0rc/deploy/infrastructure-concepts/deploy-ci-cd.mdx
@@ -1,5 +1,5 @@
 ---
-title: Setup CI/CD
+title: Build deployments via CI/CD
 description: CI/CD resources for working with Prefect.
 tags:
   - CI/CD
