--- a/docs/3.0rc/deploy/infrastructure-concepts/work-pools.mdx
+++ b/docs/3.0rc/deploy/infrastructure-concepts/work-pools.mdx
@@ -1,5 +1,5 @@
 ---
-title: Learn about work pools
+title: Manage infrastructure with work pools
 description: Prefect work pools route deployment flow runs to workers.
 ---
 
