--- a/docs/3.0rc/deploy/index.mdx
+++ b/docs/3.0rc/deploy/index.mdx
@@ -219,7 +219,7 @@ run is a suitable deployment environment.
 
 Consider running flows on dynamically provisioned infrastructure with work pools under these circumstances:
 
-- Flows that have expensive infrastructure due to the long-running process.
+- Flows that require expensive infrastructure due to the long-running process.
 - Flows with heterogeneous infrastructure needs across runs.
 - Large volumes of deployments.
 - If your internal team structure requires that deployment authors be members of a different team 
