Apply suggestions from code review
Co-authored-by: Bill Palombi <bill@prefect.io>
Co-authored-by: Jeff Hale <discdiver@users.noreply.github.com>

--- a/docs/3.0rc/deploy/infrastructure-examples/managed.mdx
+++ b/docs/3.0rc/deploy/infrastructure-examples/managed.mdx
@@ -106,7 +106,7 @@ You can view your compute hours quota usage on the **Work Pools** page in the UI
 
 ## Next steps
 
-Read more about creating deployments in the [deployment guide](/3.0rc/deploy/infrastructure-examples/docker/).
+Read more about creating deployments in [Run flows in Docker containers](/3.0rc/deploy/infrastructure-examples/docker/).
 
 For more control over your infrastructure, such as the ability to run 
 custom Docker images, [serverless push work pools](/3.0rc/deploy/infrastructure-examples/serverless/) 
