--- a/docs/3.0rc/deploy/infrastructure-examples/serverless.mdx
+++ b/docs/3.0rc/deploy/infrastructure-examples/serverless.mdx
@@ -1,5 +1,5 @@
 ---
-title: Run flows on serverless infra
+title: Run flows on serverless compute
 description: Learn how to use Prefect push work pools to schedule work on serverless infrastructure without having to run a worker.
 ---
 
@@ -628,8 +628,8 @@ Click **Create** to configure your push work pool by selecting a push option in 
  </Tab>
  <Tab title="Google Cloud Run">
 
-    Each step has several optional fields that are detailed in the 
-    [work pools guide](/3.0rc/deploy/infrastructure-concepts/work-pools/). 
+    Each step has several optional fields that are detailed in
+    [Manage infrastructure with work pools](/3.0rc/deploy/infrastructure-concepts/work-pools/). 
     Select the block you created under the GCP Credentials field. 
     This allows Prefect Cloud to securely interact with your GCP project.
  </Tab>
