--- a/docs/3.0rc/deploy/index.mdx
+++ b/docs/3.0rc/deploy/index.mdx
@@ -1,7 +1,6 @@
 ---
 title: Deployment overview
-description: Learn what deployments are and how to use them in Prefect.
-tags:
+description: Learn how to use deployments to trigger flow runs remotely.
     - orchestration
     - flow runs
     - deployments
@@ -9,10 +8,9 @@ tags:
     - triggers
     - tutorial
 search:
-  boost: 2
 ---
 
-## What is a deployment?
+## Deployments
 
 [Deployments](/3.0rc/deploy/infrastructure-examples/docker/) are server-side representations of flows. 
 They store the crucial metadata for remote orchestration including when, where, and 
@@ -74,7 +72,7 @@ The following sections explain each component in more detail.
 
 ### Required defining data
 
-Deployments universally require a `name` and a reference to an underlying `Flow`.
+Deployments require a `name` and a reference to an underlying `Flow`.
 
 The deployment name is not required to be unique across all deployments, but is required to be unique 
 for a given flow ID. This means you will often see references to the deployment's unique identifying name 
@@ -145,7 +143,7 @@ Pausing a schedule, updating your deployment, and other actions reset your auto-
 
 ### Metadata for bookkeeping
 
-Here is important information on the versions, descriptions, and tags fields:
+Important information for the versions, descriptions, and tags fields:
 
 - **`version`**: versions are always set by the client and can be any arbitrary string. 
 We recommend tightly coupling this field on your deployments to your software development lifecycle. 
@@ -217,13 +215,13 @@ run is a suitable deployment environment.
 
 ### Dynamic infrastructure
 
-Consider running flows on dynamically provisioned infrastructure with work pools under these circumstances:
+Consider running flows on dynamically provisioned infrastructure with work pools when you have any of the following:
 
 - Flows that require expensive infrastructure due to the long-running process.
 - Flows with heterogeneous infrastructure needs across runs.
 - Large volumes of deployments.
-- If your internal team structure requires that deployment authors be members of a different team 
-than the team managing infrastructure.
+- An internal organizational structure in which deployment authors or runners are not members of
+the team that manages the infrastructure.
 
 [Work pools](/3.0rc/deploy/infrastructure-concepts/work-pools/) allow Prefect to exercise greater control 
 of the infrastructure on which flows run.
