--- a/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
+++ b/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
@@ -223,7 +223,7 @@ if __name__ == "__main__":
 You can then start a worker to execute scheduled runs, pulling the flow code from `example.py`:
 
 ```bash
-# starts a worker and creates `local` work pool if it doesn't exist
+# starts a worker and creates `local` Process work pool if it doesn't exist
 prefect worker start --pool local
 ```
 
