--- a/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
+++ b/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
@@ -322,7 +322,7 @@ if __name__ == "__main__":
 When using `flow.from_source(...).deploy(...)` with a remote
 `source` (like a `GitHub` block or `str` URL like https://github.com/me/myrepo.git),
 the flow you're deploying does not need to be available locally before running your script.
-See the [API reference](https://prefect-python-sdk-docs.netlify.app/prefect/#prefect.Flow.from_source) for more info on `from_source`.
+See the [SDK reference](https://prefect-python-sdk-docs.netlify.app/prefect/#prefect.Flow.from_source) for more info on `from_source`.
 </Note>
 
 #### Deploying via a Docker image
