--- a/docs/3.0rc/develop/results.mdx
+++ b/docs/3.0rc/develop/results.mdx
@@ -3,17 +3,17 @@ title: Manage results
 description: Results represent the data returned by a flow or a task and enable features such as caching.
 ---
 
-Results are the backbone of many Prefect features - most notably [transactions](transactions) 
+Results are the bedrock of many Prefect features - most notably [transactions](transactions) 
 and [caching](task-caching) - and are foundational to the resilient execution paradigm that Prefect enables.
-At the most basic level any return value from a task or a flow is a result.
+Any return value from a task or a flow is a result.
 By default these results are not persisted and no reference to them is maintained in the API.
 
-Turning on result persistence allows you to fully benefit from Prefect's orchestration features.
+Enabling result persistence allows you to fully benefit from Prefect's orchestration features.
 
 <Tip>
 **Turn on persistence globally by default**
 
-The simplest way to turn on result persistence is through the `PREFECT_RESULTS_PERSIST_BY_DEFAULT` setting:
+The simplest way to turn on result persistence globally is through the `PREFECT_RESULTS_PERSIST_BY_DEFAULT` setting:
 
 ```bash
 prefect config set PREFECT_RESULTS_PERSIST_BY_DEFAULT=true
@@ -28,7 +28,7 @@ As mentioned above, enabling result persistence by default can be achieved throu
 `PREFECT_RESULTS_PERSIST_BY_DEFAULT` setting which is set to `False` by default.
 
 Result persistence can also be enabled or disabled on both individual flows and individual tasks.
-The following keywords on the task decorator will enable result persistence for that task:
+The following keywords on the task decorator control result persistence for that task:
 - `persist_result`: a boolean that allows you to explicity enable or disable result persistence.
 - `result_storage`: accepts either a string reference to a storage block or a storage block class that
 specifies where results should be stored.
@@ -37,16 +37,16 @@ specifies where results should be stored.
 - `cache_policy`: a [cache policy](task-caching#cache-policies) specifying the behavior of the task's cache.
 - `cache_key_fn`: [a function](task-caching#cache-key-functions) that configures a custom cache policy.
 
-Similarly, setting `persist_result=True`, `result_storage` or `result_serializer` on a flow will enable
+Similarly, setting `persist_result=True`, `result_storage`, or `result_serializer` on a flow will enable
 persistence for that flow.
 
 <Note>
-**Enabling persistence on a flow enables persistence by default for tasks**
+**Enabling persistence on a flow enables persistence by default for its tasks**
 
 Enabling result persistence on a flow through any of the above keywords will also enable it for all
 tasks called within that flow by default. 
 
-Any settings _explicitly_ set on a task will not be overriden by the flow defaults.
+Any settings _explicitly_ set on a task take precedence over the flow settings.
 
 </Note>
 
@@ -54,8 +54,7 @@ Any settings _explicitly_ set on a task will not be overriden by the flow defaul
 
 ### Default persistence configuration
 
-Once result persistence is enabled, Prefect relies on a few default settings that allow you to immediately begin
-experimenting with result persistence. 
+Result persistence is configured with the following defaults:
 All of these defaults are configurable and can also be explicitly set on flows and tasks through the
 [keyword arguments listed above](results#persisting-results).
 
@@ -64,12 +63,11 @@ cache policy, which is typically a hash of various pieces of data and metadata. 
 The return values are serialized by default using `cloudpickle` which can handle most (but not all!) Python objects
 and serializes them in machine-readable form.
 
-All three of these steps can be configured.
 
 ### Result storage
 
 You can configure the system of record for your results through the `result_storage` keyword argument.
-This keyword accepts any [filesystem block](blocks) or a block document slug. 
+This keyword accepts a [filesystem block](blocks) or a block document slug. 
 Note that if you want your tasks to share a common cache, your result storage should be accessible by 
 the infrastructure in which those tasks run. 
 For example, a common distributed filesystem for result storage is AWS S3.
@@ -117,7 +115,7 @@ You can configure the location of these results through the `PREFECT_LOCAL_STORA
 prefect config set PREFECT_LOCAL_STORAGE_PATH='~/.my-results/'
 ```
 
-This can also be configured as an environment variable:
+This location can also be configured as an environment variable:
 
 ```bash
 export PREFECT_LOCAL_STORAGE_PATH='~/.my-results/'
@@ -160,7 +158,7 @@ To learn more about caching mechanics in Prefect, see the [caching documentation
 
 ### Result serialization
 
-You can configure how results are serialized to disk using result serializers.
+You can configure how results are serialized to storage using result serializers.
 These can be set using the `result_serializer` keyword on both tasks and flows.
 A default value can be set using the `PREFECT_RESULTS_DEFAULT_SERIALIZER` setting, which defaults to `pickle`.
 Current built-in options include `"pickle"`, `"json"`, `"compressed/pickle"` and `"compressed/json"`.
@@ -170,7 +168,7 @@ you to customize serialization behavior.
 
 ### Caching of results in memory
 
-When running your workflows, Prefect keeps the results of all tasks and flows in memory 
+When running workflows, Prefect keeps the results of all tasks and flows in memory 
 so they can be passed downstream. In some cases, it is desirable to override this behavior. 
 For example, if you are returning a large amount of data from a task, it can be costly to 
 keep it in memory for the entire duration of the flow run.
